fix: enderecoMap typing